SinumerikLanguage/oldGenerate/SinumerikParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/Users/Petr/IdeaProjects/SimpleParser/src\Sinumerik.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class SinumerikParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, Println=9, 
		Print=10, Input=11, Assert=12, Size=13, Sin=14, ASin=15, Cos=16, ACos=17, 
		Tan=18, ATan=19, ATan2=20, Abs=21, Sqrt=22, Trunc=23, Pot=24, Round=25, 
		Def=26, Proc=27, EndProc=28, If=29, EndIf=30, Else=31, Return=32, For=33, 
		EndFor=34, While=35, EndWhile=36, GotoB=37, GotoF=38, Goto=39, Trans=40, 
		Atrans=41, Rot=42, Arot=43, Mirror=44, Amirror=45, Scale=46, AScale=47, 
		To=48, End=49, SubProg=50, Null=51, MFunc=52, FFunc=53, SFunc=54, TFunc=55, 
		DFunc=56, Nnumb=57, Xaxis=58, Yaxis=59, Zaxis=60, Aaxis=61, Baxis=62, 
		Caxis=63, Uaxis=64, Vaxis=65, Waxis=66, Ivect=67, Jvect=68, Kvect=69, 
		ModeAC=70, ModeIC=71, Or=72, And=73, Equals=74, NEquals=75, GTEquals=76, 
		LTEquals=77, Pow=78, Excl=79, GT=80, LT=81, Add=82, Subtract=83, Multiply=84, 
		Divide=85, Modulus=86, OBrace=87, CBrace=88, OBracket=89, CBracket=90, 
		OParen=91, CParen=92, SColon=93, Assign=94, Comma=95, QMark=96, Colon=97, 
		Bool=98, Number=99, GCodeText=100, Identifier=101, Labelstart=102, Mcodes=103, 
		String=104, Comment=105, WHITESPACE=106, CR=107;
	public const int
		RULE_parse = 0, RULE_block = 1, RULE_statement = 2, RULE_assignment = 3, 
		RULE_functionCall = 4, RULE_ifStatement = 5, RULE_ifStat = 6, RULE_ifGotostat = 7, 
		RULE_elseStat = 8, RULE_functionDecl = 9, RULE_forStatement = 10, RULE_whileStatement = 11, 
		RULE_gotoStatement = 12, RULE_idList = 13, RULE_exprList = 14, RULE_expression = 15, 
		RULE_gcodeStatement = 16, RULE_list = 17, RULE_varlist = 18, RULE_typeDef = 19, 
		RULE_indexes = 20, RULE_metkaStart = 21, RULE_metkaDest = 22, RULE_crlfStatement = 23;
	public static readonly string[] ruleNames = {
		"parse", "block", "statement", "assignment", "functionCall", "ifStatement", 
		"ifStat", "ifGotostat", "elseStat", "functionDecl", "forStatement", "whileStatement", 
		"gotoStatement", "idList", "exprList", "expression", "gcodeStatement", 
		"list", "varlist", "typeDef", "indexes", "metkaStart", "metkaDest", "crlfStatement"
	};

	private static readonly string[] _LiteralNames = {
		null, "'NOT'", "'INT'", "'STRING'", "'REAL'", "'BOOL'", "'CHAR'", "'AXIS'", 
		"'FRAME'", "'println'", "'print'", "'input'", "'assert'", "'size'", "'SIN'", 
		"'ASIN'", "'COS'", "'ACOS'", "'TAN'", "'ATAN'", "'ATAN2'", "'ABS'", "'SQRT'", 
		"'TRUNC'", "'POT'", "'ROUND'", "'DEF'", "'PROC'", null, "'IF'", "'ENDIF'", 
		"'ELSE'", "'return'", "'FOR'", "'ENDFOR'", "'WHILE'", "'ENDWHILE'", "'GOTOB'", 
		"'GOTOF'", "'GOTO'", "'TRANS'", "'ATRANS'", "'ROT'", "'AROT'", "'MIRROR'", 
		"'AMIRROR'", "'SCALE'", "'ASCALE'", "'TO'", "'end'", null, "'null'", null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "'=='", "'!='", 
		"'>='", "'<='", "'^'", "'!'", "'>'", "'<'", "'+'", "'-'", "'*'", "'/'", 
		"'%'", "'{'", "'}'", "'['", "']'", "'('", "')'", "';'", "'='", "','", 
		"'?'", "':'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, "Println", "Print", 
		"Input", "Assert", "Size", "Sin", "ASin", "Cos", "ACos", "Tan", "ATan", 
		"ATan2", "Abs", "Sqrt", "Trunc", "Pot", "Round", "Def", "Proc", "EndProc", 
		"If", "EndIf", "Else", "Return", "For", "EndFor", "While", "EndWhile", 
		"GotoB", "GotoF", "Goto", "Trans", "Atrans", "Rot", "Arot", "Mirror", 
		"Amirror", "Scale", "AScale", "To", "End", "SubProg", "Null", "MFunc", 
		"FFunc", "SFunc", "TFunc", "DFunc", "Nnumb", "Xaxis", "Yaxis", "Zaxis", 
		"Aaxis", "Baxis", "Caxis", "Uaxis", "Vaxis", "Waxis", "Ivect", "Jvect", 
		"Kvect", "ModeAC", "ModeIC", "Or", "And", "Equals", "NEquals", "GTEquals", 
		"LTEquals", "Pow", "Excl", "GT", "LT", "Add", "Subtract", "Multiply", 
		"Divide", "Modulus", "OBrace", "CBrace", "OBracket", "CBracket", "OParen", 
		"CParen", "SColon", "Assign", "Comma", "QMark", "Colon", "Bool", "Number", 
		"GCodeText", "Identifier", "Labelstart", "Mcodes", "String", "Comment", 
		"WHITESPACE", "CR"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Sinumerik.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static SinumerikParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public SinumerikParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public SinumerikParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ParseContext : ParserRuleContext {
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(SinumerikParser.Eof, 0); }
		public ParseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parse; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISinumerikListener typedListener = listener as ISinumerikListener;
			if (typedListener != null) typedListener.EnterParse(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISinumerikListener typedListener = listener as ISinumerikListener;
			if (typedListener != null) typedListener.ExitParse(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISinumerikVisitor<TResult> typedVisitor = visitor as ISinumerikVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParse(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParseContext parse() {
		ParseContext _localctx = new ParseContext(Context, State);
		EnterRule(_localctx, 0, RULE_parse);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 48; block();
			State = 49; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public FunctionDeclContext[] functionDecl() {
			return GetRuleContexts<FunctionDeclContext>();
		}
		public FunctionDeclContext functionDecl(int i) {
			return GetRuleContext<FunctionDeclContext>(i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISinumerikListener typedListener = listener as ISinumerikListener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISinumerikListener typedListener = listener as ISinumerikListener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISinumerikVisitor<TResult> typedVisitor = visitor as ISinumerikVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 55;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Println) | (1L << Print) | (1L << Assert) | (1L << Size) | (1L << Sin) | (1L << ASin) | (1L << Cos) | (1L << ACos) | (1L << Tan) | (1L << ATan) | (1L << ATan2) | (1L << Abs) | (1L << Sqrt) | (1L << Trunc) | (1L << Pot) | (1L << Round) | (1L << Def) | (1L << Proc) | (1L << If) | (1L << For) | (1L << While) | (1L << GotoB) | (1L << GotoF) | (1L << Goto) | (1L << Trans) | (1L << Atrans) | (1L << Rot) | (1L << Arot) | (1L << Mirror) | (1L << Amirror) | (1L << Scale) | (1L << AScale) | (1L << SubProg) | (1L << MFunc) | (1L << FFunc) | (1L << SFunc) | (1L << TFunc) | (1L << DFunc) | (1L << Xaxis) | (1L << Yaxis) | (1L << Zaxis) | (1L << Aaxis) | (1L << Baxis) | (1L << Caxis))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (Uaxis - 64)) | (1L << (Vaxis - 64)) | (1L << (Waxis - 64)) | (1L << (Ivect - 64)) | (1L << (Jvect - 64)) | (1L << (Kvect - 64)) | (1L << (ModeAC - 64)) | (1L << (ModeIC - 64)) | (1L << (GCodeText - 64)) | (1L << (Identifier - 64)) | (1L << (Labelstart - 64)) | (1L << (CR - 64)))) != 0)) {
				{
				State = 53;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case Println:
				case Print:
				case Assert:
				case Size:
				case Sin:
				case ASin:
				case Cos:
				case ACos:
				case Tan:
				case ATan:
				case ATan2:
				case Abs:
				case Sqrt:
				case Trunc:
				case Pot:
				case Round:
				case Def:
				case If:
				case For:
				case While:
				case GotoB:
				case GotoF:
				case Goto:
				case Trans:
				case Atrans:
				case Rot:
				case Arot:
				case Mirror:
				case Amirror:
				case Scale:
				case AScale:
				case SubProg:
				case MFunc:
				case FFunc:
				case SFunc:
				case TFunc:
				case DFunc:
				case Xaxis:
				case Yaxis:
				case Zaxis:
				case Aaxis:
				case Baxis:
				case Caxis:
				case Uaxis:
				case Vaxis:
				case Waxis:
				case Ivect:
				case Jvect:
				case Kvect:
				case ModeAC:
				case ModeIC:
				case GCodeText:
				case Identifier:
				case Labelstart:
				case CR:
					{
					State = 51; statement();
					}
					break;
				case Proc:
					{
					State = 52; functionDecl();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 57;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public AssignmentContext assignment() {
			return GetRuleContext<AssignmentContext>(0);
		}
		public GcodeStatementContext gcodeStatement() {
			return GetRuleContext<GcodeStatementContext>(0);
		}
		public FunctionCallContext functionCall() {
			return GetRuleContext<FunctionCallContext>(0);
		}
		public IfStatementContext ifStatement() {
			return GetRuleContext<IfStatementContext>(0);
		}
		public ForStatementContext forStatement() {
			return GetRuleContext<ForStatementContext>(0);
		}
		public WhileStatementContext whileStatement() {
			return GetRuleContext<WhileStatementContext>(0);
		}
		public IfGotostatContext ifGotostat() {
			return GetRuleContext<IfGotostatContext>(0);
		}
		public GotoStatementContext gotoStatement() {
			return GetRuleContext<GotoStatementContext>(0);
		}
		public MetkaStartContext metkaStart() {
			return GetRuleContext<MetkaStartContext>(0);
		}
		public CrlfStatementContext crlfStatement() {
			return GetRuleContext<CrlfStatementContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISinumerikListener typedListener = listener as ISinumerikListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISinumerikListener typedListener = listener as ISinumerikListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISinumerikVisitor<TResult> typedVisitor = visitor as ISinumerikVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 4, RULE_statement);
		try {
			State = 68;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 58; assignment();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 59; gcodeStatement();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 60; functionCall();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 61; ifStatement();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 62; forStatement();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 63; whileStatement();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 64; ifGotostat();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 65; gotoStatement();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 66; metkaStart();
				}
				break;
			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 67; crlfStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssignmentContext : ParserRuleContext {
		public ITerminalNode Identifier() { return GetToken(SinumerikParser.Identifier, 0); }
		public ITerminalNode Assign() { return GetToken(SinumerikParser.Assign, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public IndexesContext indexes() {
			return GetRuleContext<IndexesContext>(0);
		}
		public ITerminalNode Def() { return GetToken(SinumerikParser.Def, 0); }
		public TypeDefContext typeDef() {
			return GetRuleContext<TypeDefContext>(0);
		}
		public VarlistContext varlist() {
			return GetRuleContext<VarlistContext>(0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignment; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISinumerikListener typedListener = listener as ISinumerikListener;
			if (typedListener != null) typedListener.EnterAssignment(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISinumerikListener typedListener = listener as ISinumerikListener;
			if (typedListener != null) typedListener.ExitAssignment(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISinumerikVisitor<TResult> typedVisitor = visitor as ISinumerikVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssignmentContext assignment() {
		AssignmentContext _localctx = new AssignmentContext(Context, State);
		EnterRule(_localctx, 6, RULE_assignment);
		int _la;
		try {
			State = 88;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Identifier:
				EnterOuterAlt(_localctx, 1);
				{
				State = 70; Match(Identifier);
				State = 72;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==OBracket) {
					{
					State = 71; indexes();
					}
				}

				State = 74; Match(Assign);
				State = 75; expression(0);
				}
				break;
			case Def:
				EnterOuterAlt(_localctx, 2);
				{
				State = 76; Match(Def);
				State = 77; typeDef();
				State = 78; varlist();
				State = 80;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
				case 1:
					{
					State = 79; indexes();
					}
					break;
				}
				State = 83;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==Assign) {
					{
					State = 82; Match(Assign);
					}
				}

				State = 86;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
				case 1:
					{
					State = 85; expression(0);
					}
					break;
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
